add NEOFOAM_WITH_CUDA, default ON

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ option(NEOFOAM_ENABLE_CPP_CHECK "Enable cpp check static analyzer" OFF)
 option(NEOFOAM_ENABLE_CLANG_TIDY "Enable clang tidy static analyzer" OFF)
 option(NEOFOAM_ENABLE_PCH "Enable precompiled header" OFF)
 option(NEOFOAM_ENABLE_IWYU "Enable iwyu checks" OFF)
+option(NEOFOAM_ENABLE_CUDA "Enable CUDA" ON)
 option(NEOFOAM_ENABLE_MPI "Enable MPI" ON)
 option(NEOFOAM_ENABLE_MPI_WITH_THREAD_SUPPORT "Enable MPI with threading support" OFF)
 option(NEOFOAM_ENABLE_WARNINGS "Treat compiler warnings as errors" OFF)
@@ -70,7 +71,7 @@ include(cmake/CompilerWarnings.cmake)
 include(cmake/Sanitizer.cmake)
 include(cmake/StaticAnalyzers.cmake)
 
-if(Kokkos_ENABLE_CUDA)
+if(NEOFOAM_ENABLE_CUDA)
   find_package(CUDAToolkit REQUIRED)
   enable_language(CUDA)
 endif()
