--- a/benchmarks/fields/CMakeLists.txt
+++ b/benchmarks/fields/CMakeLists.txt
@@ -2,7 +2,7 @@
 # SPDX-FileCopyrightText: 2023 NeoFOAM authors
 
 add_executable(bench_fields "bench_fields.cpp")
-if(Kokkos_ENABLE_CUDA)
+if(NEOFOAM_ENABLE_CUDA)
   set_source_files_properties("bench_fields.cpp" PROPERTIES LANGUAGE CUDA)
 endif()
 target_link_libraries(bench_fields PRIVATE Catch2::Catch2 NeoFOAM Kokkos::kokkos)
