--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,7 +25,7 @@ function(neofoam_unit_test TEST)
   endif()
 
   add_executable(${TEST} "${TEST}.cpp")
-  if(Kokkos_ENABLE_CUDA)
+  if(NEOFOAM_ENABLE_CUDA)
     set_source_files_properties("${TEST}.cpp" PROPERTIES LANGUAGE CUDA)
   endif()
   target_link_libraries(${TEST} PRIVATE neofoam_catch_main neofoam_warnings neofoam_options
@@ -56,7 +56,7 @@ function(neofoam_unit_test_mpi TEST)
   endif()
 
   add_executable(${TEST} "${TEST}.cpp")
-  if(Kokkos_ENABLE_CUDA)
+  if(NEOFOAM_ENABLE_CUDA)
     set_source_files_properties("${TEST}.cpp" PROPERTIES LANGUAGE CUDA)
   endif()
   target_link_libraries(${TEST} PRIVATE neofoam_catch_main_mpi neofoam_warnings neofoam_options
