--- a/test/catch2/CMakeLists.txt
+++ b/test/catch2/CMakeLists.txt
@@ -4,9 +4,9 @@
 if(NEOFOAM_ENABLE_MPI_SUPPORT)
   add_library(neofoam_catch_main_mpi test_main_mpi.cpp mpiReporter.cpp mpiGlobals.cpp
                                      mpiSerialization.cpp)
-  if(Kokkos_ENABLE_CUDA)
+  if(NEOFOAM_ENABLE_CUDA)
     set_source_files_properties(test_main_mpi.cpp mpiReporter.cpp mpiGlobals.cpp
-    mpiSerialization.cpp PROPERTIES LANGUAGE CUDA)
+                                mpiSerialization.cpp PROPERTIES LANGUAGE CUDA)
   endif()
   target_link_libraries(neofoam_catch_main_mpi PUBLIC Catch2::Catch2 cpptrace::cpptrace
                                                       Kokkos::kokkos NeoFOAM_public_api)
@@ -14,7 +14,7 @@ if(NEOFOAM_ENABLE_MPI_SUPPORT)
 endif()
 
 add_library(neofoam_catch_main test_main.cpp)
-if(Kokkos_ENABLE_CUDA)
+if(NEOFOAM_ENABLE_CUDA)
   set_source_files_properties(test_main.cpp PROPERTIES LANGUAGE CUDA)
 endif()
 target_link_libraries(neofoam_catch_main PUBLIC Catch2::Catch2 cpptrace::cpptrace Kokkos::kokkos
