set NEOFOAM_ENABLE_CUDA to OFF for default config, and it's value will depend the configuration of Kokkos if found

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,7 @@ option(NEOFOAM_ENABLE_CPP_CHECK "Enable cpp check static analyzer" OFF)
 option(NEOFOAM_ENABLE_CLANG_TIDY "Enable clang tidy static analyzer" OFF)
 option(NEOFOAM_ENABLE_PCH "Enable precompiled header" OFF)
 option(NEOFOAM_ENABLE_IWYU "Enable iwyu checks" OFF)
-option(NEOFOAM_ENABLE_CUDA "Enable CUDA" ON)
+option(NEOFOAM_ENABLE_CUDA "Enable CUDA" OFF)
 option(NEOFOAM_ENABLE_MPI "Enable MPI" ON)
 option(NEOFOAM_ENABLE_MPI_WITH_THREAD_SUPPORT "Enable MPI with threading support" OFF)
 option(NEOFOAM_ENABLE_WARNINGS "Treat compiler warnings as errors" OFF)
