copy dll after build target neofoam_catch_main

--- a/test/catch2/CMakeLists.txt
+++ b/test/catch2/CMakeLists.txt
@@ -23,6 +23,7 @@ target_link_libraries(neofoam_catch_main PRIVATE neofoam_warnings neofoam_option
 if(MSVC)
   add_custom_command(
     TARGET neofoam_catch_main
+    POST_BUILD
     COMMAND
       ${CMAKE_COMMAND} -E copy ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE}/NeoFOAM.dll
       ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/tests/${CMAKE_BUILD_TYPE}/NeoFOAM.dll
