--- a/test/dsl/timeIntegration/CMakeLists.txt
+++ b/test/dsl/timeIntegration/CMakeLists.txt
@@ -1,4 +1,5 @@
 # SPDX-License-Identifier: Unlicense
 # SPDX-FileCopyrightText: 2024 NeoFOAM authors
 
+neofoam_unit_test(explicitRungeKutta)
 neofoam_unit_test(timeIntegration)
