--- a/test/catch2/CMakeLists.txt
+++ b/test/catch2/CMakeLists.txt
@@ -25,6 +25,6 @@ if(MSVC)
     TARGET neofoam_catch_main
     POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/NeoFOAM.dll
-            ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/tests/${CMAKE_BUILD_TYPE}/NeoFOAM.dll
+            ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/tests/NeoFOAM.dll
     COMMENT "Copy NeoFOAM.dll, test programs need it on Windows.")
 endif()
