--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -17,7 +17,7 @@ concurrency:
 jobs:
   windows_msvc:
     if: ${{!contains(github.event.pull_request.labels.*.name, 'Skip-build')}}
-    name: mingw/${{ matrix.config.name }}
+    name: msvc
     runs-on: [windows-latest]
     steps:
     - name: Checkout the latest code (shallow clone)
