rename Equation -> Expression

--- a/test/dsl/CMakeLists.txt
+++ b/test/dsl/CMakeLists.txt
@@ -3,6 +3,6 @@
 
 neofoam_unit_test(coeff)
 neofoam_unit_test(operator)
-neofoam_unit_test(equation)
+neofoam_unit_test(expression)
 
 add_subdirectory(timeIntegration)
