--- a/.github/workflows/build_adapter.yaml
+++ b/.github/workflows/build_adapter.yaml
@@ -53,7 +53,7 @@ jobs:
      - name: Install dependencies
        uses: gerlero/apt-install@v1
        with:
-         packages: >
+         packages: >-
            ninja-build
            clang-16
            gcc-10
