--- a/.github/workflows/build_adapter.yaml
+++ b/.github/workflows/build_adapter.yaml
@@ -9,7 +9,7 @@ on:
   pull_request:
     types: synchronize
   schedule:
-    - cron: "* 0 * * 0"
+    - cron: "0 6 * * 1"
 
 env:
   CTEST_OUTPUT_ON_FAILURE: 1
