--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,7 +6,7 @@ list(APPEND CMAKE_MODULE_PATH ${Catch2_SOURCE_DIR}/extras)
 # has to be first since it adds the main target
 add_subdirectory(catch2)
 
-# include "NeoFOAM/core/parallelAlgorithms.hpp" This function creates unit tests. It allows the
+# include "NeoFOAM/core/parallelAlgorithms.hpp" This function creates unit tests. It provides the
 # following keywords:
 #
 # * MPI_SIZE: the number of MPI processors to be used, defaults to 1 if not set
