- finished deprecetion of executor 'print' function, replaced with 'name'.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -85,6 +85,7 @@
     "strstream": "cpp",
     "__locale": "cpp",
     "__config": "cpp",
-    "__nullptr": "cpp"
+    "__nullptr": "cpp",
+    "format": "cpp"
   }
 }
