--- a/test/core/CMakeLists.txt
+++ b/test/core/CMakeLists.txt
@@ -12,13 +12,4 @@ neofoam_unit_test(tokenList)
 neofoam_unit_test(inputs)
 neofoam_unit_test(executor)
 neofoam_unit_test(parallelAlgorithms)
-
-# The registerClass test has to be created without linking against neofoam. Otherwise, it will pick
-# up the factories registered in neofoam, which will make the test hard to maintain.
-add_executable(registerClass "registerClass.cpp")
-target_link_libraries(registerClass PRIVATE Catch2::Catch2WithMain cpptrace::cpptrace
-                                            NeoFOAM_public_api)
-add_test(
-  NAME registerClass
-  COMMAND registerClass
-  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+neofoam_unit_test(registerClass)
