--- a/test/core/CMakeLists.txt
+++ b/test/core/CMakeLists.txt
@@ -6,6 +6,7 @@ add_subdirectory(primitives)
 
 neofoam_unit_test(collection)
 neofoam_unit_test(database)
+neofoam_unit_test(document)
 neofoam_unit_test(dictionary)
 neofoam_unit_test(tokenList)
 neofoam_unit_test(inputs)
