ENH: fieldCollection uses new type erased design

--- a/test/finiteVolume/cellCentred/fields/CMakeLists.txt
+++ b/test/finiteVolume/cellCentred/fields/CMakeLists.txt
@@ -1,6 +1,7 @@
 # SPDX-License-Identifier: Unlicense
 # SPDX-FileCopyrightText: 2024 NeoFOAM authors
 
-# neofoam_unit_test(fieldCollection) neofoam_unit_test(oldTimeCollection)
+neofoam_unit_test(fieldCollection)
+# neofoam_unit_test(oldTimeCollection)
 neofoam_unit_test(surfaceField)
 neofoam_unit_test(volumeField)
