oldTime is able to retrieve the oldTime field: oldTimeCollection is not used

--- a/test/finiteVolume/cellCentred/fields/CMakeLists.txt
+++ b/test/finiteVolume/cellCentred/fields/CMakeLists.txt
@@ -2,6 +2,6 @@
 # SPDX-FileCopyrightText: 2024 NeoFOAM authors
 
 neofoam_unit_test(fieldCollection)
-# neofoam_unit_test(oldTimeCollection)
+neofoam_unit_test(oldTimeCollection)
 neofoam_unit_test(surfaceField)
 neofoam_unit_test(volumeField)
