mvoed fieldCollection and oldTimeCollection in database

--- a/test/core/database/CMakeLists.txt
+++ b/test/core/database/CMakeLists.txt
@@ -4,3 +4,5 @@
 neofoam_unit_test(collection)
 neofoam_unit_test(database)
 neofoam_unit_test(document)
+neofoam_unit_test(fieldCollection)
+neofoam_unit_test(oldTimeCollection)
