--- a/.github/workflows/build_doc.yaml
+++ b/.github/workflows/build_doc.yaml
@@ -15,13 +15,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Requirements
-      run: sudo apt install doxygen python3-sphinx
+      run: sudo apt install doxygen python3-sphinx texlive-font-utils
         && pip3 install furo
         && pip3 install breathe
         && pip3 install sphinx-sitemap
         && pip3 install sphinxcontrib-mermaid
-      run: |
-        sudo apt install doxygen texlive-font-utils
     - name: Checkout repo
       uses: actions/checkout@v4
 
