wip try fixing aws workflow

--- a/.github/workflows/build_on_aws.yml
+++ b/.github/workflows/build_on_aws.yml
@@ -5,6 +5,7 @@ env:
   OMPI_ALLOW_RUN_AS_ROOT: 1
   OMPI_ALLOW_RUN_AS_ROOT_CONFIRM: 1
   OMPI_MCA_rmaps_base_oversubscribe: true
+  ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
 on:
   pull_request:
     types: [opened, synchronize]
