--- a/.github/workflows/build_on_aws.yml
+++ b/.github/workflows/build_on_aws.yml
@@ -82,6 +82,8 @@ jobs:
         shell: bash -i {0}
         run: |
           [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
+          nvm -v
+          node -v
       - name: Checkout NeoFOAM
         uses: actions/checkout@v2
       - name: Set up cache
