--- a/.github/workflows/build_on_aws.yml
+++ b/.github/workflows/build_on_aws.yml
@@ -81,7 +81,7 @@ jobs:
       - name: Prepare environment
         shell: bash -i {0}
         run: |
-          [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
+          . "$NVM_DIR/nvm.sh"
           nvm -v
           node -v
       - name: Checkout NeoFOAM
