--- a/.github/workflows/build_on_aws.yml
+++ b/.github/workflows/build_on_aws.yml
@@ -63,7 +63,7 @@ jobs:
                  export USER=ec2-user
                  cd /share/ec2-user
                  mkdir .nvm
-                 export NVM_DIR="/share/ec-user/.nvm"
+                 export NVM_DIR=/share/ec-user/.nvm
                  sudo curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.1/install.sh | bash
                  [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
                  nvm install v16.20.2
@@ -115,27 +115,3 @@ jobs:
           module load libfabric-aws
           module load cmake
           ctest --preset ${{matrix.preset}}
-  stop-runner:
-      name: Stop self-hosted EC2 runner
-      needs:
-        - start-runner # required to get output from the start-runner job
-        - build-on-aws # required to wait when the main job is done
-      runs-on: ubuntu-latest
-      permissions:
-        id-token: write
-        contents: read
-      # only try to run the stop job if the start runner hasn't been skipped
-      if: ${{ always() && needs.start-runner.result != 'skipped' }}
-      steps:
-        - name: Configure AWS credentials
-          uses: aws-actions/configure-aws-credentials@v4
-          with:
-            role-to-assume: arn:aws:iam::308634587211:role/Github-OIDC-Role-29bocUD8VBZr
-            aws-region: us-east-1
-        - name: Stop EC2 runner
-          uses: HendriceH/ec2-github-runner@v1.10
-          with:
-            mode: stop
-            github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-            label: ${{ needs.start-runner.outputs.label }}
-            ec2-instance-id: ${{ needs.start-runner.outputs.ec2-instance-id }}
