--- a/.github/workflows/build_on_aws.yml
+++ b/.github/workflows/build_on_aws.yml
@@ -86,6 +86,9 @@ jobs:
           nvm -v
           nvm install v16.20.2
           node -v
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 16
       - name: Checkout NeoFOAM
         uses: actions/checkout@v2
       - name: Set up cache
