--- a/.github/workflows/build_on_aws.yml
+++ b/.github/workflows/build_on_aws.yml
@@ -86,7 +86,7 @@ jobs:
           nvm -v
           nvm install v16.20.2
           node -v
-          rm /share/software/actions-runner/externals/node20/bin/node
+          sudo rm /share/software/actions-runner/externals/node20/bin/node
           ln -s /share/ec2-user/.nvm/versions/node/v16.20.2/bin/node /share/software/actions-runner/externals/node20/bin/node
       - name: Checkout NeoFOAM
         uses: actions/checkout@v2
