check via git if remote exists

--- a/.github/workflows/build_adapter.yaml
+++ b/.github/workflows/build_adapter.yaml
@@ -33,12 +33,20 @@ jobs:
             CXX: g++
     runs-on: ubuntu-24.04
     steps:
+     - name: Select branch to checkout
+       run: |
+         if [[ $(git ls-remote --heads https://github.com/exasim-project/FoamAdapter ${{ github.head_ref }}) ]]
+         then
+           echo checkout=${{ env.branch }} >> $GITHUB_ENV
+         else
+           echo checkout=main >> $GITHUB_ENV
+         fi
 
      - name: Checkout FoamAdapter
        uses: actions/checkout@v4
        with:
         repository: exasim-project/FoamAdapter
-        ref: '${{ github.head_ref }}'
+        ref: '${{ env.branch }}'
 
      - name: Checkout NeoFOAM submodule
        uses: actions/checkout@v4
