--- a/test/core/CMakeLists.txt
+++ b/test/core/CMakeLists.txt
@@ -17,27 +17,27 @@ neofoam_unit_test(parallelAlgorithms)
 # The registerClass test has to be created without linking against neofoam. Otherwise, it will pick
 # up the factories registered in neofoam, which will make the test hard to maintain.
 
-add_library(testRegister ${NeoFOAM_LIB_TYPE})
-target_sources(testRegister PRIVATE "testRegister.cpp")
-target_link_libraries(testRegister PRIVATE NeoFOAM_public_api cpptrace::cpptrace NeoFOAM)
-if(NEOFOAM_ENABLE_MPI_SUPPORT)
-  target_link_libraries(testRegister PRIVATE MPI::MPI_CXX)
-endif()
-if(WIN32)
-  set_target_properties(
-    testRegister
-    PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/tests/$<0:>
-               LIBRARY_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/tests/$<0:>
-               ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/tests/$<0:>)
+#add_library(testRegister ${NeoFOAM_LIB_TYPE})
+#target_sources(testRegister PRIVATE "runTimeSelectionFactory.cpp")
+#target_link_libraries(testRegister PRIVATE NeoFOAM_public_api cpptrace::cpptrace NeoFOAM Catch2::Catch2WithMain)
+#if(WIN32)
+#  set_target_properties(
+#    testRegister
+#    PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/tests/$<0:>
+#	       LIBRARY_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/tests/$<0:>
+#	       ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/tests/$<0:>)
+#
+#else()
+#	if(NEOFOAM_ENABLE_MPI_SUPPORT)
+#	  target_link_libraries(testRegister PRIVATE MPI::MPI_CXX)
+#	endif()
+#  set_property(TARGET testRegister PROPERTY RUNTIME_OUTPUT_DIRECTORY
+#					    ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/tests)
+#endif()
 
-else()
-  set_property(TARGET testRegister PROPERTY RUNTIME_OUTPUT_DIRECTORY
-                                            ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/tests)
-endif()
-
-add_executable(registerClass "registerClass.cpp")
-target_link_libraries(registerClass PRIVATE Catch2::Catch2WithMain cpptrace::cpptrace
-                                            NeoFOAM_public_api testRegister)
+add_executable(runTimeSelectionFactory "runTimeSelectionFactory.cpp")
+target_link_libraries(runTimeSelectionFactory PRIVATE Catch2::Catch2WithMain cpptrace::cpptrace
+                                            NeoFOAM_public_api)
 if(WIN32)
   set_target_properties(
     registerClass
@@ -46,11 +46,11 @@ if(WIN32)
                ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/tests/$<0:>)
 
 else()
-  set_property(TARGET registerClass PROPERTY RUNTIME_OUTPUT_DIRECTORY
+  set_property(TARGET runTimeSelectionFactory PROPERTY RUNTIME_OUTPUT_DIRECTORY
                                              ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/tests)
 endif()
 
 add_test(
-  NAME registerClass
-  COMMAND registerClass
+	NAME runTimeSelectionFactory
+	COMMAND runTimeSelectionFactory
   WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/tests)
