make it work with gcc and msvc

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -14,6 +14,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ (github.head_ref && github.ref) || github.run_id }}
   cancel-in-progress: true
 
+env:
+  CTEST_OUTPUT_ON_FAILURE: 1
+
 jobs:
   windows_msvc:
     if: ${{!contains(github.event.pull_request.labels.*.name, 'Skip-build')}}
