--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: Build NeoFOAM
+name: Build NeoFOAM on ubuntu
 run-name: 'Build workflow'
 
 on:
@@ -22,7 +22,7 @@ concurrency:
 jobs:
   build:
     if: ${{!contains(github.event.pull_request.labels.*.name, 'Skip-build')}}
-    name: Build NeoFOAM
+    name: Build NeoFOAM on ubuntu
     strategy:
       fail-fast: false
       matrix:
