--- a/.github/workflows/build_on_macos.yaml
+++ b/.github/workflows/build_on_macos.yaml
@@ -1,4 +1,4 @@
-name: Build NeoFOAM
+name: Build NeoFOAM on MacOs
 run-name: 'Build workflow'
 
 on:
@@ -22,7 +22,7 @@ concurrency:
 jobs:
   build:
     if: ${{!contains(github.event.pull_request.labels.*.name, 'Skip-build')}}
-    name: Build NeoFOAM
+    name: Build NeoFOAM on MacOs
     strategy:
       fail-fast: false
       matrix:
@@ -34,12 +34,6 @@ jobs:
     steps:
      - name: Checkout to repository
        uses: actions/checkout@v4
-
-     - name: Add clang repo
-       run: |
-         sudo add-apt-repository 'deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-16 main'
-         wget https://apt.llvm.org/llvm-snapshot.gpg.key
-         sudo apt-key add llvm-snapshot.gpg.key
 
      - name: Set up cache
        uses: actions/cache@v4
