change cache key

--- a/.github/workflows/build_on_macos.yaml
+++ b/.github/workflows/build_on_macos.yaml
@@ -40,7 +40,7 @@ jobs:
        if: ${{!contains(github.event.pull_request.labels.*.name, 'Skip-cache')}}
        with:
          path: build
-         key: build_PR_${{ github.event.pull_request.number }}_${{matrix.compiler.CC}}_${{matrix.preset}}
+         key: macos_build_PR_${{ github.event.pull_request.number }}_${{matrix.compiler.CC}}_${{matrix.preset}}
 
      - name: Install dependencies
        run: |
