--- a/.github/workflows/build_with_san.yaml
+++ b/.github/workflows/build_with_san.yaml
@@ -27,9 +27,9 @@ jobs:
       fail-fast: false
       matrix:
         compiler:
-          - CC: clang
-            CXX: clang++
-        preset: ["DNEOFOAM_ENABLE_SANITIZE_ADDRESS=ON",
+          - CC: gcc
+            CXX: g++
+        preset: ["NEOFOAM_ENABLE_SANITIZE_ADDRESS=ON",
           "NEOFOAM_ENABLE_SANITIZE_LEAK=ON",
           "NEOFOAM_ENABLE_SANITIZE_UB=ON",
           "NEOFOAM_ENABLE_SANITIZE_MEMORY=ON"
@@ -57,23 +57,15 @@ jobs:
          sudo apt update
          sudo apt install \
            ninja-build \
-           clang-16 \
-           gcc-10 \
-           libomp-16-dev \
            python3 \
            python3-dev \
            build-essential \
            libopenmpi-dev \
            openmpi-bin
-         sudo apt remove clang-14
-         sudo rm /usr/bin/clang
-         sudo rm /usr/bin/clang++
-         sudo ln -s /usr/bin/clang-16 /usr/bin/clang
-         sudo ln -s /usr/bin/clang++-16 /usr/bin/clang++
 
      - name: Get versions
        run: |
-         clang --version
+         g++ --version
          ninja --version
          cmake --version
 
@@ -89,4 +81,4 @@ jobs:
 
      - name: Execute unit tests NeoFOAM
        run: |
-         ctest --preset develop
+         LD_PRELOAD=/usr/lib/gcc/x86_64-linux-gnu/13/libasan.so ctest --preset develop
