switchoff sundials rk on msvc

--- a/test/timeIntegration/CMakeLists.txt
+++ b/test/timeIntegration/CMakeLists.txt
@@ -2,4 +2,9 @@
 # SPDX-FileCopyrightText: 2024 NeoFOAM authors
 
 neofoam_unit_test(timeIntegration)
-neofoam_unit_test(rungeKutta)
+
+if(WIN32)
+
+else()
+  neofoam_unit_test(rungeKutta)
+endif()
