deactivate rk test on win32

--- a/test/timeIntegration/CMakeLists.txt
+++ b/test/timeIntegration/CMakeLists.txt
@@ -2,4 +2,6 @@
 # SPDX-FileCopyrightText: 2024 NeoFOAM authors
 
 neofoam_unit_test(timeIntegration)
-neofoam_unit_test(rungeKutta)
+if(NOT WIN32)
+  neofoam_unit_test(rungeKutta)
+endif()
