--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,8 +38,8 @@ option(NEOFOAM_BUILD_BENCHMARKS "Build benchmarks" OFF)
 option(NEOFOAM_BUILD_DOC "Build documentation" OFF)
 option(NEOFOAM_WITH_SUNDIALS "Build NeoFOAM with Sundials support [currently required]" ON)
 
-option(NEOFOAM_ENABLE_GINKGO "Enable using Ginkgo as linear algebra backend." ON)
-option(NEOFOAM_ENABLE_PETSC "Enable using PETSc as linear algebra backend." ON)
+option(NEOFOAM_WITH_GINKGO "Enable using Ginkgo as linear algebra backend." ON)
+option(NEOFOAM_WITH_PETSC "Enable using PETSc as linear algebra backend." OFF)
 
 option(NEOFOAM_ENABLE_SANITIZE_ADDRESS "Enable address sanitizer" OFF)
 option(NEOFOAM_ENABLE_SANITIZE_LEAK "Enable leak sanitizer" OFF)
