ls doxygen folder

--- a/.github/workflows/build_doc.yaml
+++ b/.github/workflows/build_doc.yaml
@@ -33,6 +33,7 @@ jobs:
         sphinx-build -b html ./doc ./docs_build/
         cp -r doc/_build/ docs_build/doxygen
         cd docs_build
+        ls doxygen
         touch .nojekyll
     - name: Deploy PR Build
       uses: JamesIves/github-pages-deploy-action@v4
