--- a/test/fields/CMakeLists.txt
+++ b/test/fields/CMakeLists.txt
@@ -2,5 +2,6 @@
 # SPDX-FileCopyrightText: 2024 NeoFOAM authors
 
 neofoam_unit_test(field)
+neofoam_unit_test(compressedIntegers)
 neofoam_unit_test(domainField)
 neofoam_unit_test(segmentedField)
