--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -95,5 +95,6 @@ add_subdirectory(core)
 add_subdirectory(dsl)
 add_subdirectory(fields)
 add_subdirectory(finiteVolume)
+add_subdirectory(linearAlgebra)
 add_subdirectory(mesh)
 add_subdirectory(timeIntegration)
